# The MIT License (MIT)
#
# Copyright (c) 2016 LINE Corporation
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.

# frozen_string_literal: true
Sequel.migration do
  change do
    create_table :farm do
      primary_key :id
      String :name, null: false
      String :phase, null: false

      unique [:name, :phase]
    end

    create_table :host do
      primary_key :id

      foreign_key :farm_id, :farm
      String :name, null: false

      unique [:farm_id, :name]
    end

    create_table :exporter do
      primary_key :id

      foreign_key :farm_id, :farm
      Integer :port
      String :job

      unique [:farm_id, :port]
    end

    create_table :project do
      primary_key :id

      String :name, null: false
      String :hipchat_channel

      unique [:name]
    end

    create_table :project_farm do
      primary_key :id

      foreign_key :farm_id, :farm
      foreign_key :project_id, :project, on_delete: :cascade

      unique [:project_id, :farm_id]
    end
  end
end
